# tauri-plugin-blec

./: Cargo.toml
examples/plugin-blec-example/src-tauri/: Cargo.toml
examples/test-server/: Cargo.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: android.rs  commands.rs  handler.rs  lib.rs
