[package]
name = "tauri-plugin-blec"
license = "MIT OR Apache-2.0"
version = "0.3.6"
authors = ["Manuel Philipp"]
description = "BLE-Client plugin for Tauri"
edition = "2024"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-blec"
repository = "https://github.com/MnlPhlp/tauri-plugin-blec"
readme = "README.md"
homepage = "https://github.com/MnlPhlp/tauri-plugin-blec"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_arch = "xtensa")))'.dependencies]
tauri = { version = "2.0.6", features = ["wry"] }
serde = "1.0"
thiserror = "2.0"
btleplug = { git = "https://github.com/Catchawink/btleplug.git", features = ["serde"] }
tokio = "1.40.0"
uuid = { version = "1.13.1" }
once_cell = "1.20.2"
tracing = "0.1.40"
futures = { version = "0.3.31", default-features = false }
enumflags2 = { version = "0.7", features = ["serde"] }
serde_with = "3.12.0"

# [target.'cfg(target_os = "android")'.dependencies]
async-trait = "0.1.83"
serde_json = "1"
tokio-stream = "0.1.16"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
tauri-build = "2.0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-pc-windows-msvc",
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-linux-android",
  "x86_64-apple-ios",
]
